title, author, score, thumbnail, and link including subreddit changer

--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
         <link type='text/css' rel='stylesheet' href='main.css'/>
         <script src='lib/jquery.js'></script>
         <script src='script.js'></script>
+        <title>Poor Man's Reddit</title>
     </head>
     <body>
-        <h1>Poor Man's Reddit</h1>
+        <button id="goto">Go to subreddit</button>
+        <form id="subForm">
+            <input type="text" id="subBox">
+            <button id="submit">Submit</button>
+        </form>
         <hr>
+        <h1 id="title"></h1>
         <section></section>
     </body>
 </html>
