fixed clickable div

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
         <title>Poor Man's Reddit</title>
     </head>
     <body>
-        <button id="goto">Go to subreddit</button>
-        <form id="subForm">
-            <input type="text" id="subBox">
-            <button id="submit">Submit</button>
-        </form>
+        <button id='goto'>Go to subreddit</button>
+        <div id='subForm'>
+            <input type='text' id='subBox' value=''>
+            <button id='submit'>Submit</button>
+        </div>
         <hr>
-        <h1 id="title"></h1>
+        <h1 id='title'></h1>
         <section></section>
     </body>
 </html>
